Fix popup cart notification overlap in the latest Safari version (#1912)

--- a/assets/base.css
+++ b/assets/base.css
@@ -154,7 +154,7 @@
 .color-icon-outline-button {
   --color-icon: rgb(var(--color-base-outline-button-labels));
 }
- 
+
 .product-card-wrapper .card {
   --border-radius: var(--product-card-corner-radius);
   --border-width: var(--product-card-border-width);
@@ -2238,6 +2238,7 @@ input[type='checkbox'] {
   display: block;
   position: relative;
   background-color: rgb(var(--color-background));
+  z-index: 1;
 }
 
 .header-wrapper--border-bottom {
